--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,9 @@
-@import "bootstrap"
+@import "bootstrap";
+@import "typography";
+@import "components/index";
+
+body {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 300
+}
+
