--- a/app/assets/stylesheets/typography.scss
+++ b/app/assets/stylesheets/typography.scss
@@ -1,7 +1,12 @@
 label{
-	font-weight: 500 
+	font-weight: 500
 }
 
 .form-control{
 	font-weight: 500
+}
+
+.display-3{
+	font-family: 'Roboto Condensed', sans-serif;
+
 }
