--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,20 @@
 @import "bootstrap";
 @import "typography";
 @import "components/index";
+@import "races/index";
 
 body {
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 300
+	font-family: 'Roboto', sans-serif;
+	font-weight: 300;
+	color: #424242
 }
 
+.container-fluid{
+	padding-top: 30px;
+	padding-bottom: 30px
+}
+
+.container {
+	padding-top: 30px;
+	padding-bottom: 30px
+}
