--- a/app/views/races/show.html.erb
+++ b/app/views/races/show.html.erb
@@ -1,2 +1,34 @@
-<h1>Races#show</h1>
-<p>Find me in app/views/races/show.html.erb</p>
+
+<div class="container-fluid container-show px-5">
+	<%= render "show_card", race: @race, markers: @markers, city: @city %>
+	<%= render "nav_show" %>
+
+	<div class="card py-3 px-4 race-show-card">
+		<div class="tab-content" id="pills-tabContent">
+			<div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+
+				<% if user_signed_in? %>
+					<%= simple_form_for ([@race, Review.new]),  html: { class: 'review-form' } do |f| %>
+					<%= f.input :title %>
+					<%= f.input :text %>
+					<%= f.input :path_rating %>
+					<%= f.input :organization_rating %>
+					<%= f.input :quality_price_rating %>
+					<%= f.input :difficulty %>
+					<%= f.button :submit %>
+					<% end %>
+				<% end %>
+
+
+
+
+
+			</div>
+			<div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
+		</div>
+
+	</div>
+
+</div>
+
+<%= javascript_pack_tag "show_map" %>
