--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,19 +2,28 @@
 @import "typography";
 @import "components/index";
 @import "races/index";
+@import "reviews/index";
 
 body {
 	font-family: 'Roboto', sans-serif;
-	font-weight: 300;
-	color: #424242
+	font-weight: 400;
+	color: #484848;
 }
 
-.container-fluid{
+.container-fluid {
 	padding-top: 30px;
-	padding-bottom: 30px
+	padding-bottom: 30px;
 }
 
 .container {
 	padding-top: 30px;
-	padding-bottom: 30px
+	padding-bottom: 30px;
 }
+
+.marker {
+	background-image: url(runner-icon-blu.png);
+	background-size: cover;
+	width: 27px;
+	height: 48px;
+	cursor: pointer;
+	background-position: center;}
