--- a/app/views/questions/_question_accordion.html.erb
+++ b/app/views/questions/_question_accordion.html.erb
@@ -1,19 +1,40 @@
 <% questions.each do |question| %>
-<div id="accordion">
-  <div class="card">
-    <div class="card-header" id="question-<%= question.id %>">
-      <h5 class="mb-0">
-        <button class="btn btn-link" data-toggle="collapse" data-target="#<%= question.id %>-question" aria-expanded="true" aria-controls="<%= question.id %>-question">
-          <h5><%= question.title %></h5>
-        </button>
-      </h5>
+  <div id="accordion_question" class="review-form-box">
+    <div class="card review-card-collapse">
+      <div class="card-header card-header-review p-0" id="review-accordion">
+        <h5 class="mb-0">
+          <button class="button-question btn-review btn-question btn btn-link collapsed" data-toggle="collapse" data-target="#question-<%= question.id %>" aria-expanded="false" aria-controls="question-<%= question.id %>">
+            <%= question.title %>
+            <br>
+            <span class="question-info">Domanda di:
+              <%= question.user.username %>
+              inserita il
+              <%= question.created_at.strftime("%d/%m/%Y") %></span>
+          </button>
+        </h5>
+      </div>
+      <div id="question-<%= question.id %>" class="collapse" aria-labelledby="review-accordion" data-parent="#accordion_question">
+        <% question.answers.order(created_at: :asc).each do |a| %>
+          <div class=" pl-5 card-body answer-body">
+            <span class="answer-info"><%= a.user.username %>
+              ha risposto:</span>
+            <p class="mb-0 answer-text"><%= a.text %></p>
+            <span class="question-info">
+              <%= a.created_at.strftime("%d/%m/%Y") %></span>
+          </div>
+        <% end %>
+        <div class="card-body answer-body">
+          <%= simple_form_for ([race, question, Answer.new]) do |f|%>
+          <%= f.input :text, label: "Rispondi alla conversazione"%>
+          <div class="">
+            <%= f.button :submit, "Rispondi", class:"btn medium-btn"%>
+          </div>
+
+        <% end %>
+      </div>
+
     </div>
 
-    <div id="<%= question.id %>-question" class="collapse show" aria-labelledby="question-<%= question.id %>" data-parent="#accordion">
-      <div class="card-body">
-        <p><%= question.text %></p>
-      </div>
-    </div>
   </div>
 </div>
 <% end %>
