--- a/app/views/races/show.html.erb
+++ b/app/views/races/show.html.erb
@@ -1,43 +1,36 @@
 <div class="container-fluid container-show px-5">
 	<div class="row">
-		<div class="col-md-10 mx-auto">
+		<div class="col-md-12 mx-auto">
 			<%= render "show_card", race: @race, markers: @markers, city: @city %>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-10 mx-auto">
+			<%= render "nav_show" %>
+
+			<div class="card py-3 px-4 race-show-card">
+				<div class="tab-content" id="pills-tabContent">
+					<div class="tab-pane fade show active review-box-container" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+
+						<!-- <#% if user_signed_in? %> -->
+							<%= render "reviews/accordion_form", race: @race %>
+						<!-- <#% end %> -->
+						<% @reviews.each do |review| %>
+							<%= render "reviews/box_show", review: review %>
+						<% end %>
+
+					</div>
+					<div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+
+						<%= render "questions/question_accordion", questions: @race.questions, race: @race%>
+
+					</div>
+				</div>
+
+			</div>
 
 		</div>
 	</div>
 
-<div class="row">
-	<div class="col-md-10 mx-auto">
-		<%= render "nav_show" %>
-
-		<div class="card py-3 px-4 race-show-card">
-			<div class="tab-content" id="pills-tabContent">
-				<div class="tab-pane fade show active review-box-container" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-
-					<% if user_signed_in? %>
-						<%= render "reviews/accordion_form", race: @race %>
-					<% end %>
-					<% @reviews.each do |review| %>
-						<%= render "reviews/box_show", review: review %>
-					<% end %>
-
-			</div>
-			<div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-
-				<%= render "questions/question_accordion", questions: @race.questions %>
-
-
-
-
-
-			</div>
-		</div>
-
-	</div>
-
-	</div>
 </div>
-
-</div>
-
-<%= javascript_pack_tag "show_map" %>
